--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,11 @@
 kind: pipeline
 type: docker
-name: greeting
+name: default
 
 steps:
-- name: en
+- name: greeting
   image: alpine
   commands:
-  - echo hello world
+  - echo hello
+  - echo world
 
-- name: fr
-  image: alpine
-  commands:
-  - echo bonjour monde
