--- a/.drone.yml
+++ b/.drone.yml
@@ -1,31 +1,13 @@
 kind: pipeline
 type: docker
-name: en
+name: default
 
 steps:
-- name: greeting
-  image: alpine
+- name: test
+  image: gcr.io/library/golang
   commands:
-  - echo hello world
-
-trigger:
-  event:
-  - push
-
----
-kind: pipeline
-type: docker
-name: fr
-
-steps:
-- name: greeting
-  image: alpine
-  commands:
-  - echo bonjour monde
-  
-trigger:
-  event:
-  - pull_request
+  - go build
+  - go test -v
 
 
 
