--- a/.drone.yml
+++ b/.drone.yml
@@ -4,11 +4,14 @@ name: default
 
 steps:
 - name: test
-  image: gcr.io/library/golang
+  image: golang:1.13
   commands:
   - go build
   - go test -v
 
+services:
+- name: redis
+  image: redis
 
 
 
