--- a/.drone.yml
+++ b/.drone.yml
@@ -1,22 +1,11 @@
----
 kind: pipeline
-type: docker
 name: default
 
 steps:
-- name: backend
-  image: golang
+- name: test
+  image: python
   commands:
-  - go build
-  - go test
-
-- name: frontend
-  image: node
-  commands:
-  - npm install
-  - npm run test
-
-...
-
+  - pip install -r requirements.txt
+  - pytest
 
 
