--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,8 @@ steps:
   image: python
   commands:
   - pip install -r requirements.txt
+  - pip install -U pytest
+  - pytest --version
   - pytest
 
 
