--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,40 @@
+---
+
 kind: pipeline
 name: default
-
 steps:
 - name: test
-  image: python
+  image: python:2
   commands:
   - pip install -r requirements.txt
   - pip install -U pytest
   - pytest --version
   - pytest
 
+---
+kind: pipeline
+name: python-3-9
 
+steps:
+- name: test
+  image: python:3.9
+  commands:
+  - pip install -r requirements.txt
+  - pip install -U pytest
+  - pytest --version
+  - pytest
+
+---
+kind: pipeline
+name: python-3-8
+
+steps:
+- name: test
+  image: python:3.8
+  commands:
+  - pip install -r requirements.txt
+  - pip install -U pytest
+  - pytest --version
+  - pytest
+
+---
