--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,13 @@
 ---
 kind: pipeline
-name: python-3-9
+name: test-on-amd64
+
+platform:
+  arch: amd64
 
 steps:
 - name: test
-  image: python:3.9
+  image: python
   commands:
   - pip install -r requirements.txt
   - pip install -U pytest
@@ -13,11 +16,14 @@ steps:
 
 ---
 kind: pipeline
-name: python-3-8
+name: test-on-arm64
+
+platform:
+  arch: arm64
 
 steps:
 - name: test
-  image: python:3.8
+  image: python
   commands:
   - pip install -r requirements.txt
   - pip install -U pytest
