--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,12 @@
 kind: pipeline
-type: docker
 name: default
 
 steps:
-- name: greeting
-  image: alpine
-  commands:
-  - echo hello
-  - echo world
+- name: docker  
+  image: plugins/docker
+  settings:
+    username: khurram703docker
+    password: Pakistan1947@@@
+    repo: foo/bar
+    tags:
+    - latest
