--- a/.drone.yml
+++ b/.drone.yml
@@ -7,19 +7,11 @@ steps:
   image: docker:dind
   volumes:
   - name: dockersock
-    path: /var/run
+    path: /var/run/docker.sock
   commands:
-  - sleep 5 # give docker enough time to start
   - docker ps -a
-
-services:
-- name: docker
-  image: docker:dind
-  privileged: false
-  volumes:
-  - name: dockersock
-    path: /var/run
 
 volumes:
 - name: dockersock
-  temp: {}
+  host:
+    path: /var/run/docker.sock
